template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_az104_06_vm0_name": {
            "defaultValue": "az104-06-vm0",
            "type": "String"
        },
        "virtualMachines_az104_06_vm1_name": {
            "defaultValue": "az104-06-vm1",
            "type": "String"
        },
        "virtualMachines_az104_06_vm2_name": {
            "defaultValue": "az104-06-vm2",
            "type": "String"
        },
        "virtualNetworks_az104_06_vnet1_name": {
            "defaultValue": "az104-06-vnet1",
            "type": "String"
        },
        "networkInterfaces_az104_06_nic0_name": {
            "defaultValue": "az104-06-nic0",
            "type": "String"
        },
        "networkInterfaces_az104_06_nic1_name": {
            "defaultValue": "az104-06-nic1",
            "type": "String"
        },
        "networkInterfaces_az104_06_nic2_name": {
            "defaultValue": "az104-06-nic2",
            "type": "String"
        },
        "adminPassword": {
            "type": "SecureString"
        },
        "location": {
            "defaultValue": "eastus",
            "type": "String"
        },
        "scriptUri": {
            "type": "String",
            "defaultValue": "https://raw.githubusercontent.com/kevin-samson/azure-cloud/refs/heads/main/mongodb-install.sh"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-02-01",
            "name": "[concat(parameters('virtualMachines_az104_06_vm0_name'), '-pip')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-02-01",
            "name": "[concat(parameters('virtualMachines_az104_06_vm1_name'), '-pip')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-02-01",
            "name": "[concat(parameters('virtualMachines_az104_06_vm2_name'), '-pip')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2021-02-01",
            "name": "[parameters('virtualNetworks_az104_06_vnet1_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": ["10.0.0.0/16"]
                },
                "subnets": [
                    {
                        "name": "backendSubnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    },
                    {
                        "name": "frontendSubnet",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2021-02-01",
            "name": "az104-06-frontendNSG",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-MongoDB",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27017",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Allow-Port-3000",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-Port-3001",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3001",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },

        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2021-02-01",
            "name": "az104-06-backendNSG",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-MongoDB",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27017",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-02-01",
            "name": "az104-06-lb-pip",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
		{
			"type": "Microsoft.Network/loadBalancers",
			"apiVersion": "2021-02-01",
			"name": "az104-06-lb",
			"location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
			"properties": {
				"frontendIPConfigurations": [
					{
						"name": "frontendConfig",
						"properties": {
							"publicIPAddress": {
								"id": "[resourceId('Microsoft.Network/publicIPAddresses', 'az104-06-lb-pip')]"
							}
						}
					}
				],
				"backendAddressPools": [
					{
						"name": "backendPool",
						"properties": {}
					}
				],
				"loadBalancingRules": [
					{
						"name": "http-rule",
						"properties": {
							"frontendIPConfiguration": {
								"id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', 'az104-06-lb', 'frontendConfig')]"
							},
							"backendAddressPool": {
								"id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'az104-06-lb', 'backendPool')]"
							},
							"protocol": "Tcp",
							"frontendPort": 80,
							"backendPort": 80,
							"enableFloatingIP": false,
							"idleTimeoutInMinutes": 4,
							"loadDistribution": "Default"
						}
					}
				],
				"probes": [
					{
						"name": "http-probe",
						"properties": {
							"protocol": "Http",
							"port": 80,
							"requestPath": "/",
							"intervalInSeconds": 30,
							"numberOfProbes": 2
						}
					}
				]
			},
            "dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', 'az104-06-lb-pip')]"
			]
		},
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2021-02-01",
            "name": "[parameters('networkInterfaces_az104_06_nic0_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_az104_06_vnet1_name'), 'backendSubnet')]"
                            },
							"publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm0_name'), '-pip'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'az104-06-frontendNSG')]"
                }
            },
			"dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm0_name'), '-pip'))]"
			]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2021-02-01",
            "name": "[parameters('networkInterfaces_az104_06_nic1_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_az104_06_vnet1_name'), 'frontendSubnet')]"
                            },
							"publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm1_name'), '-pip'))]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'az104-06-lb', 'backendPool')]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'az104-06-frontendNSG')]"
                }
            },
			"dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm1_name'), '-pip'))]",
                "[resourceId('Microsoft.Network/loadBalancers', 'az104-06-lb')]"
			]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2021-02-01",
            "name": "[parameters('networkInterfaces_az104_06_nic2_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_az104_06_vnet1_name'), 'frontendSubnet')]"
                            },
							"publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm2_name'), '-pip'))]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'az104-06-lb', 'backendPool')]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'az104-06-frontendNSG')]"
                }
            },
			"dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm2_name'), '-pip'))]",
                "[resourceId('Microsoft.Network/loadBalancers', 'az104-06-lb')]"
			]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-07-01",
            "name": "[parameters('virtualMachines_az104_06_vm0_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_az104_06_vm0_name')]",
                    "adminUsername": "azureuser",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic0_name'))]"
                        }
                    ]
                }
            },
            "resources": [
                {
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "apiVersion": "2021-07-01",
                    "name": "[concat(parameters('virtualMachines_az104_06_vm0_name'), '/CustomScript')]",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_az104_06_vm0_name'))]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "[parameters('scriptUri')]"
                            ],
                            "commandToExecute": "sh mongodb-install.sh"
                        }
                    }
                }
            ],
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', 'az104-06-lb')]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic0_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm0_name'), '-pip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_az104_06_vnet1_name'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-07-01",
            "name": "[parameters('virtualMachines_az104_06_vm1_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_az104_06_vm1_name')]",
                    "adminUsername": "azureuser",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic1_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', 'az104-06-lb')]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic1_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm1_name'), '-pip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_az104_06_vnet1_name'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-07-01",
            "name": "[parameters('virtualMachines_az104_06_vm2_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_az104_06_vm2_name')]",
                    "adminUsername": "azureuser",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic2_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', 'az104-06-lb')]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_az104_06_nic2_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('virtualMachines_az104_06_vm2_name'), '-pip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_az104_06_vnet1_name'))]"
            ]
        }
    ]
}
